# dvd_rental

./: CONTRIBUTING.rst  README.md  README.rst  pyproject.toml  requirements.txt  run.py  setup.py  test.py
.github/workflows/: github-actions.demo.yml
dvdrental/: conf.py  scripts.py
dvdrental/app/: main.py
dvdrental/app/static/: form.html  index.html
dvdrental/db/: init.py  schema.py  sqla.py
dvdrental/dvdrental/: init.py
