[project]
name = "dvd-rental"
description = "A short usage of common tools"
dynamic = [ "version" ]

requires-python = ">=3.9"

[tool.poetry]
version = "1.0.0"


[project.optional-dependencies]
mysql = [ "mysqlclient>=1.3,<2.0" ]
pgsql = [ "psycopg2>=2.9,<3.0" ]
databases = [ "mysqlclient>=1.3,<2.0", "psycopg2>=2.9,<3.0" ]

